Added Read me file

--- a/ETL_Mini_Project_nKosuru_TinaDhn.ipynb
+++ b/ETL_Mini_Project_nKosuru_TinaDhn.ipynb
@@ -3196,7 +3196,7 @@
    "outputs": [],
    "source": [
     "# Export the DataFrame as a CSV file. \n",
-    "contact_info_df_reOrder.to_csv(\"Resources/contacts.csv\", encoding='utf8', index=False)"
+    "contact_info_df_reOrder.to_csv(\"Export/contacts1.csv\", encoding='utf8', index=False)"
    ]
   },
   {
@@ -4046,7 +4046,7 @@
    "outputs": [],
    "source": [
     "# Export the DataFrame as a CSV file. \n",
-    "contact_info_df2.to_csv(\"Resources/contacts.csv\", encoding='utf8', index=False)"
+    "contact_info_df2.to_csv(\"Export/contacts2.csv\", encoding='utf8', index=False)"
    ]
   },
   {
